--- a/src/index.html
+++ b/src/index.html
@@ -5,27 +5,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beauty Salon</title>
     <link rel="stylesheet" href="../dist/styles/main.css">
-<body>
-
-    <header>
-        <div class="sapo">beauty<span>salon.</span></div>
-        <nav>
-            <a color= href="#">Início</a>
-            <a href="#">Sobre</a>
-            <a href="#">Serviços</a>
-            <a href="#">Depoimentos</a>
-            <a href="#">Contato</a>
-        </nav>
-    </header>
-    
-    <section class="bixo">
-        <div class="bixo-text">
-            <h1>Saúde natural para os seus cabelos</h1>
-            <p>Um salão exclusivo em São Paulo, especializado em tratamentos naturais.</p>
-            <a href="#" class="btn">Agendar um horário</a>
+    <body>
+    <header class="header">
+        <div class="container">
+            <h1>Beauty <span>Salon</h1>
+            <nav>
+                <ul class="nav-list">
+                    <li><a href="#">Início</a></li>
+                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#">Serviços</a></li>
+                    <li><a href="#">Depoimentos</a></li>
+                    <li><a href="#">Contato</a></li>
+                </ul>
+            </nav>
         </div>
-        <img src="../img/re.jpg" alt="Cabeleireira atendendo cliente">
+    </header>
+
+    <section class="cap">
+        <div class="container">
+            <h2>Saúde natural para os seus cabelos</h2>
+            <img src="../img/re.jpg" alt="Profissional cuidando dos cabelos">
+            <button>Agendar agora</button>
+            <h4>Suade natural para cabelo</h4>
+        </div>
     </section>
-    
-    </body>
-    </html>
+
+    <section class="mom">
+        <div class="container">
+            <h3>Sobre nós</h3>
+            <div class="mom-content">
+                <img src="../img/bb.png" alt="Equipe do salão">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non urna vitae urna dignissim facilisis. Nossa equipe é dedicada a proporcionar cuidados naturais para seus cabelos.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="pix">
+        <div class="container">
+            <h3>Serviços</h3>
+            <div class="pix-item">Tratamento Capilar</div>
+            <div class="pix-item">Cortes</div>
+            <div class="pix-item">Tratamentos Naturais</div>
+        </div>
+    </section>
+
+    <section class="popo">
+            <h3>Depoimentos</h3>
+            <p>"Excelente serviço! Recomendo muito." - Cliente 1</p>
+            <p>"Meus cabelos nunca estiveram tão saudáveis." - Cliente 2</p>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="container">
+            <h4>Entre em contato</h4>
+            <p>Email: contato@beautysalon.com</p>
+            <p>Telefone: (11) 1234-5678</p>
+        </div>
+    </footer>
+</body>
+</html>
